--- a/css/index.css
+++ b/css/index.css
@@ -14,11 +14,11 @@
 }
 ::-webkit-scrollbar{
     width: 4px;
-    color:#c70039;
+    color #01ffbb;
     transition: all .4s ease;
 }
 ::-webkit-scrollbar-thumb {
-    background: #c70039; 
+    background: #01ffbb; 
     border-radius: 4px;
     width: 4px;
     transition: all .4s ease;
@@ -391,7 +391,7 @@ body{
 #breaker{
     height: 100vh;
     width: 200%;
-    background-color: #c70039;
+    background-color: #01ffbb;
     opacity: 1;
     animation: breakeranimate 2s linear;
     display: none;
@@ -513,7 +513,7 @@ body{
     font-family: aileron;
     font-weight: 400;
     font-size: 35px;
-    color: #c70039;
+    color: #01ffbb;
     transition: all .4s ease;
 }
 .cv {
@@ -524,7 +524,7 @@ body{
     border:none;
     padding: 15px 30px;
     color: whitesmoke;
-    background: #c70039;
+    background: #01ffbb;
     outline: none;
     font-size:20px;
     font-family: aileron;
@@ -600,14 +600,14 @@ body{
     margin: 20px;
     border-radius: 30%;
     padding: 10px;
-    border: 0px solid #c70039;
-    background: #c70039;
-    box-shadow:0px 0px 0px 0px #c70039 ;
+    border: 0px solid #01ffbb;
+    background: #01ffbb;
+    box-shadow:0px 0px 0px 0px #01ffbb ;
     height:100px;
     transition: all .8s ease;
 }
 .service:hover .service-img img{
-    box-shadow:0px 0px 0px 400px #c70039 ;
+    box-shadow:0px 0px 0px 400px #01ffbb ;
 }
 .service-description{
     font-family: poppins;
@@ -691,9 +691,9 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:95%;
+    width:98%;
     border-radius: 10px;
-    background: #c70039;
+    background: #01ffbb;
 }
 .js-progress{
     position: absolute;
@@ -707,7 +707,7 @@ body{
     transition: all .4s ease;
     width:90%;
     border-radius: 10px;
-    background: #c70039;
+    background: #01ffbb;
 }
 .adobe-progress{
     position: absolute;
@@ -720,7 +720,7 @@ body{
     transition: all .4s ease;
     width:83%;
     border-radius: 10px;
-    background: #c70039;
+    background: #01ffbb;
 }
 .php-progress{
     position: absolute;
@@ -732,7 +732,7 @@ body{
     justify-content: center;
     width:85%;
     border-radius: 10px;
-    background: #c70039;
+    background: #01ffbb;
     transition: all .4s ease;
 }
 .jquery-progress{
@@ -746,7 +746,7 @@ body{
     transition: all .4s ease;
     width:94%;
     border-radius: 10px;
-    background: #c70039;
+    background: #01ffbb;
 }
 .seo-progress{
     position: absolute;
@@ -759,7 +759,7 @@ body{
     width:84%;
     border-radius: 10px;
     transition: all .4s ease;
-    background: #c70039;
+    background: #01ffbb;
 }
 .portfolio-header{
     height: auto;
@@ -818,7 +818,7 @@ padding-bottom: 40px;
     font-family: poppins;
     font-weight: 200;
     padding: 20px;
-    color: #c70039;
+    color: #01ffbb;
     transition: all .4s ease;
 }
 .portfolio-text p{
@@ -835,11 +835,11 @@ padding-bottom: 40px;
     font-weight: 200;
     padding: 10px 20px;
     background:transparent;
-    color:#c70039;
+    color:#01ffbb;
     transition: all .4s ease;
     outline: none;
     margin: 20px;
-    border: 1.5px solid #c70039;
+    border: 1.5px solid #01ffbb;
     cursor: pointer;
     overflow: hidden;
     position: relative;
@@ -854,7 +854,7 @@ padding-bottom: 40px;
     top: 0;
     left: 0;
     z-index: 3;
-    background: #c70039;
+    background: #01ffbb;
     transition: all .7s ease;
 }
 .portfolio-text button:hover{
@@ -885,7 +885,7 @@ padding-bottom: 40px;
     content: "";
     height: 100%;
     width: 100%;
-    background: #c70039;
+    background: #01ffbb;
     opacity: .1;
     top: 0;
     left: 0;
@@ -986,7 +986,7 @@ padding-bottom: 40px;
     position: absolute;
     left: 0;
     bottom: 0;
-    background: #c70039;
+    background: #01ffbb;
     color: whitesmoke;
     font-size: 18px;
     text-align: center;
@@ -1294,7 +1294,7 @@ form button:hover{
     width: 100%;
 }
 .color-red{
-    background: #c70039;
+    background: #01ffbb;
 }
 .color-purple{
     background: #481380;
@@ -1401,7 +1401,7 @@ For devices with smaller width like mobile phone
     #breaker{
         height: 50vh;
         width: 200%;
-        background-color: #c70039;
+        background-color: #01ffbb;
         opacity: 1;
         animation: breakeranimate 2s linear;
         display: none;
@@ -1569,7 +1569,7 @@ For devices with smaller width like mobile phone
                 display: none;
             }
             .service:hover .service-img img{
-                box-shadow:0px 0px 0px 0px #c70039 ;
+                box-shadow:0px 0px 0px 0px #01ffbb ;
             }
             .portfolio-image img{
                 height: 300px;
@@ -1856,7 +1856,7 @@ for tabs and large phones
     #breaker{
         height: 50vh;
         width: 200%;
-        background-color: #c70039;
+        background-color: #01ffbb;
         opacity: 1;
         animation: breakeranimate 2s linear;
         display: none;
@@ -2040,7 +2040,7 @@ for tabs and large phones
                 display: none;
             }
             .service:hover .service-img img{
-                box-shadow:0px 0px 0px 0px #c70039 ;
+                box-shadow:0px 0px 0px 0px #01ffbb ;
             }
             .portfolio-image img{
                 height: 380px;
@@ -2560,5 +2560,8 @@ for tabs and large phones
         border: none;
         border-radius: 8px;
         transition: all .4s ease;
+    }
+    .enlaces:hover{
+color: #000000;
     }
 }
